--- a/configs/config.yml
+++ b/configs/config.yml
@@ -7,7 +7,7 @@ api:
     idleTimeout: 60s
 
 database:
-    databaseUrl: "host=localhost port=5432 user=postgres dbname=postgres password=qwerty sslmode=disable"
+    databaseUrl: "host=web_forum_db port=5432 user=postgres dbname=postgres password=qwerty sslmode=disable"
     driver: "postgres"
     dbname: "forum"
     schemesPath: "./database/schema/"
